Updated docs to 1.7.1
