# examples/openapi.yaml
@@ -2,7 +2,7 @@
 openapi: 3.0.0
 info:
   title: Open Leaked YAML
-  description: "## Introduction\nThis API is documented in **OpenAPI** format. \n\n## OpenAPI Specification\nThis API is documented in **OpenAPI format** and is based on\n[Petstore sample](http://petstore.swagger.io/) provided by [swagger.io](http://swagger.io) team.\nIt was **extended** to illustrate features of [generator-openapi-repo](https://github.com/Rebilly/generator-openapi-repo)\ntool and [ReDoc](https://github.com/Redocly/redoc) documentation. In addition to standard\nOpenAPI syntax we use a few [vendor extensions](https://github.com/Redocly/redoc/blob/master/docs/redoc-vendor-extensions.md).\n\n## Cross-Origin Resource Sharing\nThis API features Cross-Origin Resource Sharing (CORS) implemented in compliance with  [W3C spec](https://www.w3.org/TR/cors/).\nAnd that allows cross-domain communication from the browser.\nAll responses have a wildcard same-origin which makes them completely public and accessible to everyone, including any code on any site.\n\n## Authentication\nThe application makes uses of build in authentication. Some of the client calls will be restricted. A local API key may be optained from the vendor\n"
+  description: "## Introduction\nThis API is documented in **OpenAPI** format. \n\n## OpenAPI Specification\nThis API is documented in **OpenAPI format** and is based on\n[Petstore sample](http://petstore.swagger.io/) provided by [swagger.io](http://swagger.io) team.\n\n## Authentication\nThe application makes uses of build in authentication. Some of the client calls will be restricted. Use the HTTP basic form to authorize. "
   contact:
     name: Open Leaked
     url: https://github.com/Open-Leaked/Monorepo
@@ -10,17 +10,17 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.5.1
+  version: 1.7.1
   x-logo:
-    url: https://redocly.github.io/redoc/petstore-logo.png
-    altText: Petstore logo
+    url: https://raw.githubusercontent.com/Open-Leaked/Monorepo/main/Assets/logo/png/logo-white.png?token=GHSAT0AAAAAACB2FNOUZBLHC6LN6IMED47EZC3SB3Q
+    altText: Open-Leaked Logo
 servers:
-- url: https://virtserver.swaggerhub.com/Peetzie/OpenLeaked/1.0.0
+- url: https://virtserver.swaggerhub.com/Peetzie/OpenLeaked/1.7.1
   description: SwaggerHub API Auto Mocking
-- url: openleaked.compute.dtu.dk
-  description: Default server
 - url: localhost
   description: Local running server
+- url: open-leaked.compute.dtu.dk
+  description: DTU Compute VPN Required
 tags:
 - name: healthcheck
   description: Healthcheck to check backend us running
@@ -43,20 +43,56 @@ tags:
 - name: username
   description: All endpoints associated with the username service
   x-displayname: Searcheables
+- name: domain
+  description: All endpoints assciated with domain lookup
+  x-displayname: Searchables
+- name: authenticationstatus
+  description: All endpoints associated with checking if the user is logged in
+  x-displayname: Authoirisations
 paths:
+  /api/domain/breaches:
+    post:
+      tags:
+      - domain
+      summary: Finds associated breaches
+      description: |-
+        Takes a DomainRequestBody, and returns breaches associated with a domain.
+         Might return an empty set
+      requestBody:
+        $ref: '#/components/requestBodies/Domain'
+      responses:
+        "200":
+          description: Retrieved all associated breaches
+        "404":
+          description: Domain not found in any breaches
+      security:
+      - basicAuth: []
+  /api/domain/exists:
+    post:
+      tags:
+      - domain
+      summary: Checks whether or not the domain is existing in a breach
+      requestBody:
+        $ref: '#/components/requestBodies/Domain'
+      responses:
+        "200":
+          description: Domain was found in a breach
+        "404":
+          description: Domain was not found in a breach
+      security:
+      - basicAuth: []
   /api/Username/exists:
     post:
       tags:
       - username
-      summary: Simple lookup in the database
-      description: Checks whether or not the username is existing in the database.
+      summary: Checks whether or not the username is existing in a breach
       requestBody:
         $ref: '#/components/requestBodies/Username'
       responses:
         "200":
-          description: success
+          description: Username was found in a breach
         "404":
-          description: No breaches found
+          description: Username was not found in a breach
       security:
       - basicAuth: []
   /api/username/breaches:
@@ -64,14 +100,16 @@ paths:
       tags:
       - username
       summary: Finds associated breaches
-      description: "Takes a username RequestBody, performs the lookup and retrieves breaches associated with that breach if any. Might return an empty set."
+      description: |-
+        Takes a UsernameReqeustBody, and returns breaches associated with a username.
+         Might return an empty set
       requestBody:
         $ref: '#/components/requestBodies/Username'
       responses:
         "200":
-          description: Success
+          description: Retrieved all associated breaches
         "404":
-          description: Could not find username in database
+          description: Domain was not found in any breaches
       security:
       - basicAuth: []
   /api/subscribe/verify:
@@ -84,22 +122,22 @@ paths:
         $ref: '#/components/requestBodies/Subscribe'
       responses:
         "200":
-          description: Sucess
+          description: Successfully verified user - Entered was correct
         "400":
-          description: Bad request
+          description: Could not verify - Entered was incorrect
       security:
       - basicAuth: []
   /api/subscribe/signup:
     post:
       tags:
       - subscribe
-      summary: Subscribe
-      description: Adds the user to the subscribed users table
+      summary: Subscribe to notifications
+      description: Adds the user to the database of subscribers
       requestBody:
         $ref: '#/components/requestBodies/Email'
       responses:
         "200":
-          description: Sucess
+          description: Successfully added the user
         "409":
           description: Verification already send
         "406":
@@ -110,30 +148,29 @@ paths:
     post:
       tags:
       - subscribe
-      summary: Unsubscribe
-      description: Removes the user from the subscribed users table
+      summary: Unsubscribe from notificatons
+      description: Removes the user from the subscribers database
       requestBody:
         $ref: '#/components/requestBodies/Email'
       responses:
         "200":
-          description: Sucess
+          description: Successfully removed the user from the subscribers database
         "400":
-          description: Failed to remove subscribers users
+          description: Failed to remove the user - User is not in the subscribers table
       security:
       - basicAuth: []
   /api/password/exists:
     post:
       tags:
       - password
-      summary: Simple lookup in the database
-      description: Checks whether or not the password is existing in the database.
+      summary: Checks whether or not the password is existing in a breach
       requestBody:
         $ref: '#/components/requestBodies/Password'
       responses:
         "200":
-          description: success
+          description: Password was found in a breach
         "404":
-          description: Password not found
+          description: Password was not found in a breach
       security:
       - basicAuth: []
   /api/password/breaches:
@@ -141,14 +178,16 @@ paths:
       tags:
       - password
       summary: Finds associated breaches
-      description: "Takes a password RequestBody, performs the lookup and retrieves breaches associated with that breach if any. Might return an empty set."
+      description: |-
+        Takes a PasswordRequestBody, and returns breaches associated with a password.
+         Might return an empty set
       requestBody:
         $ref: '#/components/requestBodies/Password'
       responses:
         "200":
-          description: OK
+          description: Retrieved all associated breaches
         "404":
-          description: Could not find password in database
+          description: Password was not found in any breaches
       security:
       - basicAuth: []
   /api/email/breaches:
@@ -156,42 +195,52 @@ paths:
       tags:
       - email
       summary: Finds associated breaches
-      description: "Takes an email requestbody, performs lookup in the databases and retrieves the breaches associated with that email if any. Might be an empty set returned."
+      description: |-
+        Takes a EmailRequestBody, and returns breaches associated with a email.
+         Might return an empty set
       requestBody:
         $ref: '#/components/requestBodies/Email'
       responses:
         "200":
-          description: OK
+          description: Retrieved all associated breaches
         "404":
-          description: No breaches found or email was not found
+          description: Email was not found in any breaches
       security:
       - basicAuth: []
   /api/email/exists:
     post:
       tags:
       - email
-      summary: Simple lookup in the database
-      description: Checks whether or not the email is existing in the database.
+      summary: Checks whether or not the email is existing in a breach
       requestBody:
         $ref: '#/components/requestBodies/Email'
       responses:
         "200":
-          description: OK
+          description: Email was found in a breach
         "404":
-          description: Email was not found in a breach.
+          description: Email was not found in a breach
       security:
       - basicAuth: []
+  /api/amiloggedin:
+    post:
+      tags:
+      - authenticationstatus
+      summary: Checks whether or not the current client is authorized.
+      responses:
+        "200":
+          description: Currently connected as an authorized user
+        "400":
+          description: Currently connected as an unauthorized user
   /api/healthcheck:
     get:
       tags:
       - healthcheck
-      summary: Checks that the service is currently running
-      description: "Simple benefecial healthcheck, no further use."
+      summary: Checks that the backend service is running
       responses:
         "200":
-          description: OK
+          description: Backend server is running
         "503":
-          description: Service Unavailable
+          description: Backend server is currently not up
   /api/tip/send:
     post:
       tags:
@@ -201,17 +250,17 @@ paths:
         $ref: '#/components/requestBodies/Tip'
       responses:
         "200":
-          description: OK
-        "400":
-          description: Bad Request
+          description: Successfully send tip to maintainers
+        "409":
+          description: Breach already exists in database
       security:
       - basicAuth: []
-  /api/login/login:
+  /api/auth/login:
     post:
       tags:
       - authorisations
       summary: Authorise an existing user
-      description: This action can be performed by anyone. If the user is currently already in an active session the session is extended.
+      description: This action can be performed by anyone with valid credentials. Session is active until logout or closing the browser
       responses:
         "200":
           description: Success
@@ -232,17 +281,17 @@ paths:
                 type: string
       security:
       - basicAuth: []
-  /api/login/logout:
+  /api/auth/logout:
     post:
       tags:
       - authorisations
-      summary: Ends current the current
-      description: This action can be performed by any user currently in an active session (authorized). If sucessfull the session token will be revoked
+      summary: Signs out the current user
+      description: This action can be performed by any authorized user. Once successfull the session cookie will be removed
       responses:
         "200":
-          description: OK
+          description: Successfully signed out current user
         "401":
-          description: Unauthorized
+          description: Could not end session for current user
           headers:
             X-CUSTOM-AUTHENTICATE:
               style: simple
@@ -251,11 +300,12 @@ paths:
                 type: string
       security:
       - basicAuth: []
-  /api/login/verify:
+  /api/auth/verify:
     post:
       tags:
       - authorisations
-      summary: Verification of the temporary 6-digit code.
+      summary: Verify user
+      description: Authenticate the user by checking the entered verification code.
       requestBody:
         content:
           application/json:
@@ -264,10 +314,10 @@ paths:
         required: true
       responses:
         "200":
-          description: OK
+          description: Successfully verified user - Entered was correct
         "400":
-          description: Bad Request
-  /api/login/recover:
+          description: Could not verify - Entered was incorrect
+  /api/auth/recover:
     post:
       tags:
       - authorisations
@@ -281,10 +331,10 @@ paths:
         required: true
       responses:
         "200":
-          description: OK
+          description: Successfully send verification code to user
         "400":
-          description: Bad Request
-  /api/login/newPassword:
+          description: Could not send verification code
+  /api/auth/newPassword:
     post:
       tags:
       - authorisations
@@ -298,15 +348,15 @@ paths:
         required: true
       responses:
         "200":
-          description: OK
+          description: Sucessfully updated the password
         "400":
-          description: Bad Request
-  /api/login/register:
+          description: Could not update password
+  /api/auth/register:
     post:
       tags:
       - authorisations
-      summary: Authorise an existing user
-      description: Uses the HTTP basic protocol to authenticate a user at the SecurityFilterChain
+      summary: Creates a new user in the users database
+      description: Creates a new user using JDBC and BCrypt in the users and authorities table
       requestBody:
         content:
           application/json:
@@ -315,18 +365,24 @@ paths:
         required: true
       responses:
         "200":
-          description: OK
+          description: Successfully created a new user
         "400":
-          description: Bad Request
+          description: Could not create a new user
         "409":
-          description: Password exists in the breach database
+          description: Could not create a new user - Password has been found in a breach
 components:
   schemas:
+    Domain:
+      type: object
+      properties:
+        value:
+          type: string
+          example: example.com
+      example: example.com
     Username:
       type: object
       properties:
         value:
-          minLength: 1
           type: string
           example: username
       example:
@@ -356,7 +412,6 @@ components:
       type: object
       properties:
         value:
-          minLength: 1
           type: string
           description: Unhashed password
           example: password
@@ -380,7 +435,6 @@ components:
       type: object
       properties:
         desc:
-          minLength: 0
           type: string
           description: "Any discription for the data leak. Could be context, types of data or perhabs any password if compressed with password."
           example: Description Example
@@ -426,12 +480,10 @@ components:
           description: "User password, MUST contain a mix of upper and lower case letters, as well as digits and special characters."
           example: drowssaP123#
         fullName:
-          minLength: 1
           type: string
           description: Full name of the user
           example: John Doe
         studentNo:
-          minLength: 1
           type: string
           description: Student number or Employee initials - no constraints (proof of concept)
           example: s1741XX
@@ -505,12 +557,10 @@ components:
       type: object
       properties:
         Local:
-          minLength: 1
           type: string
           description: First part of the email pre-@
           example: johndoe
         Domain:
-          minLength: 1
           type: string
           description: Second part of the email post-@
           example: example.com
@@ -524,6 +574,14 @@ components:
           schema:
             type: string
   requestBodies:
+    Domain:
+      content:
+        application/json:
+          schema:
+            allOf:
+            - title: DomainRequestBody
+            - $ref: '#/components/schemas/Domain'
+      required: true
     Username:
       content:
         application/json:
